@@ -3,7 +3,7 @@
  * COMMANDS.C - External command functions for Nagios
  *
  * Copyright (c) 1999-2002 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   01-21-2002
+ * Last Modified:   06-29-2002
  *
  * License:
  *
@@ -2861,6 +2861,8 @@ void process_passive_service_checks(void){
 		this_pcr=passive_check_result_list;
 		while(this_pcr!=NULL){
 			next_pcr=this_pcr->next;
+			free(this_pcr->host_name);
+			free(this_pcr->svc_description);
 			free(this_pcr);
 			this_pcr=next_pcr;
 	                }
@@ -2876,6 +2878,8 @@ void process_passive_service_checks(void){
 	this_pcr=passive_check_result_list;
 	while(this_pcr!=NULL){
 		next_pcr=this_pcr->next;
+		free(this_pcr->host_name);
+		free(this_pcr->svc_description);
 		free(this_pcr);
 		this_pcr=next_pcr;
 	        }
